prodMetadata/src/objects/Event_Survey__c.object
<CustomObject>
    <description>This object will store the results of post-membership event web surveys.</description>
    <fields>
        <fullName>Answer1__c</fullName>
        <description>Answer to Custom Question 1</description>
        <label>Answer1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer2__c</fullName>
        <description>Answer to Custom Additional Question 2</description>
        <inlineHelpText>Answer to Custom Additional Question 2</inlineHelpText>
        <label>Answer2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did you attend the event?</description>
        <inlineHelpText>Did you attend the event?</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COV__c</fullName>
        <description>Are you familiar with IAVA&apos;s Community of Veterans?</description>
        <inlineHelpText>Are you familiar with IAVA&apos;s Community of Veterans?</inlineHelpText>
        <label>COV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I have an account.</fullName>
                </value>
                <value>
                    <fullName>I&apos;ve heard of it, but haven&apos;t signed up yet.</fullName>
                </value>
                <value>
                    <fullName>I&apos;ve heard of it, but am not interested.</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know what that is.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign/Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Event Surveys</relationshipLabel>
        <relationshipName>Event_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Surveys</relationshipLabel>
        <relationshipName>Event_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>Do you have any additional feedback for us?</description>
        <inlineHelpText>Do you have any additional feedback for us?</inlineHelpText>
        <label>Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAVAEvents__c</fullName>
        <description>Do you thing you&apos;d attend future IAVA events?</description>
        <inlineHelpText>Do you thing you&apos;d attend future IAVA events?</inlineHelpText>
        <label>Future events</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewGIBill__c</fullName>
        <description>Are you or someone you know using, or plan on using, the Post-9/11 GI Bill?</description>
        <inlineHelpText>Are you or someone you know using, or plan on using, the Post-9/11 GI Bill?</inlineHelpText>
        <label>NewGIBill</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question1__c</fullName>
        <description>Custom Additional Question 1</description>
        <label>Question1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question2__c</fullName>
        <description>Custom Additional Question 2</description>
        <inlineHelpText>Custom Additional Question 2</inlineHelpText>
        <label>Question2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSVP_Process__c</fullName>
        <description>How would you describe the website/RSVP process?</description>
        <inlineHelpText>How would you describe the website/RSVP process?</inlineHelpText>
        <label>RSVP Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>It&apos;s easy enough to do.</fullName>
                </value>
                <value>
                    <fullName>It&apos;s a bit cumbersome.</fullName>
                </value>
                <value>
                    <fullName>I really don&apos;t like submitting my information on a web form.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email from IAVA</fullName>
                </value>
                <value>
                    <fullName>Saw a Flyer</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Survey</label>
    <nameField>
        <displayFormat>S-{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Event Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>